welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:27: error: not found: value deca
  deca = litMessage().toInt
  ^Array2:28: error: not found: value deca
  setCouleurBrosse(T(deca))
                     ^Array2:33: error: not found: value deca
    setCouleurBrosse(T((a+1+deca)%getWorldHeight()))
                            ^